# advantage-game-art-pack

./: .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json  pyproject.toml  sitecustomize.py  tsconfig.json  vite.config.ts
asf/: __init__.py
canon/: corpus_manifest.json  style_canon.json
conductor/: game-asset-demand.md  index.md  lessons-learned.md  product.md  tech-debt.md  tracks.md  workflow.md
critic_thresholds/: background_scene.json  calibration_report.md  character_sheet.json  cover_surface.json  loading_surface.json  parallax_layer_set.json  prop_or_fx_sheet.json  tileset.json  ui_sheet.json
examples/: boss-dragon.json  composition-digests.json  enemy-goblin.json  enemy-spectre.json  fx-set.json  knight_guard.json  npc-prisoner.json  prop-set-library.json  ragged_prisoner.json  svg_character.json  swamp_slime.json
measure/: anti-patterns.md  doctor.sh  game-asset-demand.md  index.md  lessons-learned.md  product-guidelines.md  product.md  review-2026-07-06.md  review-daily-2026-07-01.md  review-daily-2026-07-05.md  review-scratch.mts  review.html  tech-debt.md  tech-stack.md  tracks.md  workflow.md
pages/: _app.tsx  index.tsx
src/: styles.css  vite-env.d.ts
style_packs/: cute_chibi_v1.json
tests/: test_batch.py  test_batch_entity_generation.py  test_batch_exporter.py  test_batch_orchestrator.py  test_batch_runner.py  test_bundle.py  test_candidate_loop.py  test_canon.py  test_compilers.py  test_credentials.py  test_critic_adapters.py  test_critic_policy.py  test_exporter.py  test_live_llm_smoke.py  test_part_library.py  (+22 more)
(+396 files in other folders)
